objects/ObjectLbl5__c.object
<CustomObject>
    <fields>
        <fullName>Field11__c</fullName>
        <label>Field11</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>Field12</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field13m__c</fullName>
        <label>Field13m</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field14__c</fullName>
        <label>Field14</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectLbl5_Field__c</fullName>
        <label>ObjectLbl5_Field</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>ObjectLbl5</label>
    <nameField>
        <label>ObjectLbl2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ObjectLbl5s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>